# arm64-uarch-probe

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  probe  pyproject.toml
.github/: pull_request_template.md
analysis/: latency_baseline.md
arm64_probe/: README.md  __init__.py  __main__.py  errors.py
arm64_probe/analysis/: __init__.py  baseline.py  comparison.py  figures.py  ingestion.py  models.py  report.py  statistics.py  store.py
arm64_probe/backends/: __init__.py  base.py  io.py  select.py
arm64_probe/cli/: __init__.py  main.py  parser.py  render.py
arm64_probe/diagnostics/: __init__.py  doctor.py
arm64_probe/domain/: __init__.py  ids.py  models.py
arm64_probe/environment/: __init__.py  constants.py  coordinator.py  journal.py  locking.py  models.py  recovery.py  requests.py  signals.py
arm64_probe/execution/: __init__.py  result_store.py  resume.py  runner.py
arm64_probe/planning/: __init__.py  planner.py  request.py
arm64_probe/registry/: __init__.py  catalog.py  validation.py
arm64_probe/serialization/: __init__.py  json_io.py  model_json.py
baseline/: README.md
configs/: README.md  capabilities.json
configs/experiments/: README.md  cache-latency.json  migration-latency.json
configs/profiles/: README.md  baseline.json  smoke.json
docs/arch/: cpu_topology.md  pmu_mapping.md
docs/methodology/: README.md  (+3 more)
legacy/: README.md  manifest.json
results/: README.md
runner/: cache_info_collect.sh  cache_info_detect.sh  cache_info_model.py  run_pmu_v2.7.10_section9_dram_cold.sh  run_pmu_v2.7.11_section10_crosscluster_migrate.sh  run_pmu_v2.7.3.sh  run_pmu_v2.7.4.sh  run_pmu_v2.7.5.sh  run_pmu_v2.7.6.sh  run_pmu_v2.7.7.sh  run_pmu_v2.7.8_section7.sh  run_pmu_v2.7.9_section8_slc_capacity.sh
schemas/: analysis-summary.schema.json  baseline-manifest.schema.json  capability-observation.schema.json  capability.schema.json  case.schema.json  doctor-report.schema.json  environment-requirement.schema.json  environment.schema.json  error.schema.json  experiment.schema.json  manifest.schema.json  plan.schema.json  platform.schema.json  profile.schema.json  run-result.schema.json  sample.schema.json
scripts/: legacy_manifest.py
tests/: test_legacy_manifest.py  test_makefile_contract.py  test_repository_policy.py
(+150 files in other folders)
