[project]
name = "arm64-uarch-probe"
version = "0.1.0"
description = "Reproducible GB10 ARM64 microarchitecture research baseline."
readme = "README.md"
requires-python = "==3.13.13"
license = { text = "Proprietary" }
authors = [
    { name = "Michael Yao" }
]
keywords = ["arm64", "uarch", "microarchitecture", "probe", "gb10"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

# Runtime dependencies: Phase 4 adds matplotlib for figure generation.
# The control layer (planning, environment, execution) uses only the
# Python standard library.
dependencies = [
    "matplotlib>=3.9",
]

[project.scripts]
probe = "arm64_probe.cli.main:main"

[project.urls]
Repository = "https://github.com/michaelyaoxxx/arm64-uarch-probe"

# ---------------------------------------------------------------------------
# uv workspace setup
# ---------------------------------------------------------------------------
# The package is importable directly from the repository root because the
# `arm64_probe/` directory lives at the top level. We do not build a wheel
# for distribution in v1.0; `uv sync` only provisions a local interpreter
# and resolution metadata for reproducible tests.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arm64_probe"]

# ---------------------------------------------------------------------------
# Development tool configuration
# ---------------------------------------------------------------------------

[tool.uv]
# Keep the local virtual environment inside the working tree so every
# checkout is self-contained and CI never depends on a system Python.
managed = true
package = false

[tool.pytest]
# Tests use unittest discovery, not pytest, but uv-managed pytest may be
# installed by editors. Leave the defaults; explicit pytest configuration
# is intentionally absent.
minversion = "0.0"
